--- a/whereistime/AndroidManifest.xml
+++ b/whereistime/AndroidManifest.xml
@@ -30,19 +30,14 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.qiantu.whereistime.LogoActivity"
+            android:name="com.qiantu.whereistime.ActivityMain"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.qiantu.whereistime.ActivityMain"
-            android:label="@string/app_name"
-            >
-        </activity>
-        <activity android:name="com.qiantu.whereistime.AppInfoActivity"></activity>
+        <activity android:name="com.qiantu.whereistime.ActivityAppInfo"></activity>
         <activity android:name="com.qiantu.whereistime.SettingDialog"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             >
@@ -51,7 +46,7 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             >
         </activity>
-        <activity android:name="com.qiantu.whereistime.ReadmeActivity"
+        <activity android:name="com.qiantu.whereistime.ActivityReadme"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             >
         </activity>
