--- a/whereistime/AndroidManifest.xml
+++ b/whereistime/AndroidManifest.xml
@@ -50,6 +50,11 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             >
         </activity>
+        
+        <!-- service -->
+        <service android:name="com.miquan.service.BackService"></service>
+        <service android:name="com.miquan.service.DeamonService"></service>
+        
         <!-- 分享 -->
         <activity
 		   android:name="cn.sharesdk.framework.ShareSDKUIShell"
@@ -73,9 +78,6 @@
 	 	<activity android:name="com.tencent.connect.common.AssistActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:screenOrientation="portrait" />
-	 	
-        <service android:name="com.miquan.service.BackService"
-            ></service>
     </application>
 
 </manifest>
